--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+
+* {
+  font-family: 'Karla', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 15px;
+}
+
+.meme {
+  margin-top: 20px;
+  width: 720px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
   color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
 }
 
-.App-link {
-  color: #61dafb;
+.bottom {
+  bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top {
+  top: 30px;
+}
+
+.meme {
+  position: relative;
+
+}
+
+.form {
+  width: 800px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.top-text {
+  grid-column: 1 / 2;
+  margin: 5% 2.5% 5% 10%;
+}
+
+.bottom-text {
+  grid-column: 2 / 3;
+  margin: 5% 10% 5% 2.5%;
+}
+
+input {
+  padding: 12.5px;
+  border-radius: 5px;
+  border: .5px solid gray;
+} 
+
+button {
+  grid-column: 1 / 3;
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  color: #FFFFFF;
+  padding: 12.5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  text-align: center;
+  margin: 0 5% 0 5%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  display: flex;
+  align-items: center;
+}
+
+header img {
+  width: 75px;
+  padding: 30px;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
+@media screen and (max-width: 755px) {
+  .form { width: 600px;}
+  .meme { width: 540px;}
+}
+
+@media screen and (max-width: 555px) {
+  .form { width: 350px;}
+  .meme { width: 320px;}
 }
